# solana-cli-program-template

./: .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
client/: README.md  fetch.ts  index.ts  keyfile.ts  lib.ts  main.ts
client/tests/: keyfile.ts  soltrans.ts
keys/: README.md  keys_db.yml
keys/accounts/: service_account.json  service_wallet.json  user1_account.json  user1_wallet.json  user2_account.json  user2_wallet.json
keys/program/: SampGgdt3wioaoMZhC6LTSbg4pnuvQnSfJpDYeuXQBv.json
program/: Cargo.toml  README.md
program/src/: account_state.rs  entry_point.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/tests/: README.md  lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: README.md  clparse.rs  lib.rs  main.rs  utils.rs
src/utils/: account_state.rs  account_utils.rs  keys_db.rs  txn_utils.rs
tests/: README.md  full.rs  local.rs  thin.rs
tests/common/: mod.rs
