[package]
name = "cli-program-template"
version = "0.1.5"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.3"
clap = "2.33.3"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
solana-cli-template-program-bpf = {path = "program"}
sol-template-shared = {path = "shared"}
solana-clap-utils = "1.14.*"
solana-cli-config = "1.14.*"
solana-client = "1.14.*"
solana-logger ="1.14.*"
solana-remote-wallet = "1.14.*"
solana-sdk = "1.14.*"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "program",
    "shared",
]
[dev-dependencies]
lazy_static = "1.4.0"
solana-test-validator = "1.14.*"
solana-streamer = "1.14.*"